--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dist/"
   ],
   "author": "Martin Donadieu <martin@capgo.app>",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Cap-go/capacitor-android-kiosk.git"
